--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
-  "typeAcquisition": {
-    "enable": true,
-    "include": ["node_modules/web-ext-types/global/index.d.ts", "src/types/*"]
-  },
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
     "removeComments": true,
     "strict": true,
     "alwaysStrict": true,
-    "types": ["node_modules/web-ext-types/global/index.d.ts", "src/types/*"],
     "noUnusedLocals": true,
     "noImplicitAny": true,
+    "typeRoots": [
+      "src/types"
+    ],
+    "types": [
+      "../../node_modules/web-ext-types/global/"
+    ]
   }
 }
